--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,4 +19,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
+      - name: Push tag to DockerHub
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/basic_auth_server:latest   
