--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Push tag to DockerHub
         run: |
-          docker-compose start basic_auth
+          docker-compose run basic_auth
       - name: Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
