--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
-      - name: Push tag to DockerHub
+      - name: Docker run basic_auth
         run: |
           docker-compose run basic_auth
       - name: Log in to Docker Hub
@@ -21,5 +21,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push Tag to Dockerhub
+        run: |
+          docker push diverbriz/basic_auth
       
       
